hard-gists/1638546/run.log
=== Docker Run Log for 1638546 ===
Started at: Mi 29. Okt 12:21:27 CET 2025

[2025-10-29 12:21:27] START: Running container for 1638546
[2025-10-29 12:21:27] SUCCESS: Container 1a1b293983a7039b92392f65aef8f2450c28618353821df41dbf03207dbc896f started for 1638546
=== Container logs for 1638546 ===
  File "/snippet.py", line 21
    print "Authenticating with Google...",
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1638546 ===
[2025-10-29 12:21:29] INFO: Container 1a1b293983a7039b92392f65aef8f2450c28618353821df41dbf03207dbc896f has stopped
